<resources>
    <string name="app_name">LaCommande</string>
    <string name="activity_admin_clubs">Comptes Clubs</string>
    <string name="activity_admin_stocks">Gestion des stocks</string>
    <string name="activity_help">Aide</string>
    <string name="activity_admin_plannings">Panning Caféteria</string>
    <string name="action_settings">Settings</string>
    <string name="activity_clients">Liste des clients</string>
    <string name="activity_order">Nouvelle commande</string>

    <string name="menu_exit">Quitter</string>
    <string name="menu_lock">Fermer la cafet</string>
    <string name="menu_help">Aide</string>
    <string name="menu_clean">Vider le panier</string>
    <string name="menu_refresh">Actualiser</string>

    <!-- Sliding tabs Strings -->
    <array name="tabs_names">
        <item>Comptoir</item>
        <item>Liste</item>
        <item>Historique</item>
        <item>Impayés</item>
    </array>

    <array name="tabs_names_admin">
        <item>Administrateur</item>
        <item>Comptoir</item>
        <item>Liste</item>
        <item>Historique</item>
        <item>Impayés</item>
    </array>

    <!-- Login Activity Strings -->
    <string name="login_hint">Login du club</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_instructions">Identification nécessaire</string>
    <string name="login_instructions_2">Entrez le login et mot de passe\nqui vous ont été communiqués.</string>
    <string name="login_button">CONNEXION</string>
    <string name="login_credits">LaCommande V%1$s</string>
    <string name="login_credits_2">François Leparoux – ESEOmega 2016</string>

    <!-- Salt -->
    <string name="salt_login_club">Identification en cours</string>
    <string name="salt_password">p8brURUs</string>
    <string name="salt_sync_club">Compte administrateur</string>
    <string name="salt_sync_planning">Compte logistique</string>
    <string name="salt_sync_order">Commande impayée</string>
    <string name="salt_get_token">Paramètres requis : %s</string>

    <!-- Admin items Strings -->
    <string-array name="items_admin_titles">
        <item>Comptes Clubs</item>
        <item>Panning Caféteria</item>
        <item>Paramètres</item>
        <item>Message de service</item>
        <item>Menus et Elements</item>
        <item>Gestion des stocks</item>
    </string-array>

    <string-array name="items_admin_descriptions">
        <item>Ajoutez, modifiez les logins et mots de passe ou supprimez les comptes des clubs qui ont accès à la commande caféteria</item>
        <item>Définissez les jours et heures d\'ouverture / fermeture du service de la caféteria</item>
        <item>Modifiez la valeur des réglages de la cafet tels que l\'accès à Lyida ou l\'ouverture du service en ligne</item>
        <item>Définissez le message de service qui sera affiché dans l\'onglet "Cafet" des applications</item>
        <item>Ajoutez, modifiez ou supprimez les menus et élements qui sont proposés aux étudiants</item>
        <item>Marquez un élement ou un ingrédient comme indisponible temporairement afin qu\'il n\'apparaîsse pas dans les menus proposés</item>
    </string-array>

    <array name="items_admin_icons">
        <item>@drawable/ic_club_set</item>
        <item>@drawable/ic_planner</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_ad</item>
        <item>@drawable/ic_ingredients</item>
        <item>@drawable/ic_fish</item>
    </array>

    <string name="share_using">Partager depuis ...</string>
    <string name="history_pages">Page : </string>
    <string name="order_load">Mise à jour des données ...</string>
    <string name="no_order">Aucune commande en cours.\nVous pouvez vous reposer !</string>
    <string name="no_unpaid">Aucune commande impayée n\'a été trouvée.</string>

    <!-- Random Strings for Password generation -->
    <string-array name="password_samples">
        <item>maecenas</item>
        <item>non</item>
        <item>tincidunt</item>
        <item>ipsum</item>
        <item>nunc</item>
        <item>dignissim</item>
        <item>nulla</item>
        <item>est</item>
        <item>nec</item>
        <item>mattis</item>
        <item>ligula</item>
        <item>accumsan</item>
        <item>eu</item>
        <item>pellentesque</item>
        <item>non</item>
        <item>felis</item>
        <item>non</item>
        <item>nisl</item>
        <item>suscipit</item>
        <item>malesuada</item>
        <item>phasellus</item>
        <item>sed</item>
        <item>augue</item>
        <item>sit</item>
        <item>amet</item>
        <item>ante</item>
        <item>hendrerit</item>
        <item>efficitur</item>
        <item>aliquam</item>
        <item>gravida</item>
        <item>blandit</item>
        <item>odio</item>
        <item>eu</item>
        <item>consequat</item>
        <item>magna</item>
        <item>posuere</item>
        <item>quis</item>
        <item>aliquam</item>
        <item>erat</item>
        <item>volutpat</item>
        <item>fusce</item>
        <item>augue</item>
        <item>elit</item>
        <item>mollis</item>
        <item>a</item>
        <item>enim</item>
        <item>in</item>
        <item>commodo</item>
        <item>fringilla</item>
        <item>metus</item>
        <item>sed</item>
        <item>nec</item>
        <item>dui</item>
        <item>vitae</item>
        <item>velit</item>
        <item>interdum</item>
        <item>ultrices</item>
        <item>ut</item>
        <item>nec</item>
        <item>odio</item>
        <item>duis</item>
        <item>magna</item>
        <item>lorem</item>
        <item>cursus</item>
        <item>id</item>
        <item>sodales</item>
        <item>et</item>
        <item>rhoncus</item>
        <item>eu</item>
        <item>ipsum</item>
        <item>pellentesque</item>
        <item>eu</item>
        <item>bibendum</item>
        <item>nisi</item>
        <item>eget</item>
        <item>viverra</item>
        <item>sem</item>
        <item>donec</item>
        <item>rutrum</item>
        <item>quis</item>
        <item>sem</item>
        <item>ut</item>
        <item>bibendum</item>
        <item>duis</item>
        <item>in</item>
        <item>malesuada</item>
        <item>mauris</item>
        <item>in</item>
        <item>efficitur</item>
        <item>justo</item>
        <item>mauris</item>
        <item>leo</item>
        <item>metus</item>
        <item>placerat</item>
        <item>eget</item>
        <item>consectetur</item>
        <item>nec</item>
        <item>ullamcorper</item>
        <item>eget</item>
        <item>velit</item>
    </string-array>

</resources>
